Wed Oct 28 15:24:09 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* error.c (name_err_mesg_to_str): quote the name if unprintable.

	* object.c (check_setter_id): use rb_check_id to convert names.

	* variable.c (uninitialized_constant): use NameError::message to
	  keep the receiver of uninitialized constant.  [Feature #10881]

	* error.c (rb_name_err_new): new function to create NameError
	  exception instance.  [Feature #10881]

Wed Oct 28 13:29:39 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (new_attr_op_assign): fix op_assign type, which is
	  already an ID since r52284.  [Feature #11537]

Tue Oct 27 23:14:14 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* defs/id.def: enable anonymous IDs not to expose internal IDs for
	  frozen-string-literal-debug by Marshal.dump.

Tue Oct 27 17:06:55 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* defs/id.def: move internal IDs for frozen-string-literal-debug.

Tue Oct 27 16:41:05 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* error.c (rb_error_frozen_object): use rb_attr_get instead of
	  rb_ivar_get to get rid of warnings for string objects created
	  when frozen-string-literal-debug is disabled.

Tue Oct 27 16:18:12 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/logger.rb (Logger::Period#previous_period_end): as weekly
	  rotation shifts the log file on Sundays, the end date of the
	  previous period should be Saturdays.  fix r45072.
	  [ruby-dev:49314] [Bug #11622]

Tue Oct 27 16:12:37 2015  NARUSE, Yui  <naruse@ruby-lang.org>

	* vm_dump.c (rb_print_backtrace): our addr2line doesn't work on sparc.
	  http://rubyci.s3.amazonaws.com/unstable11s/ruby-trunk/log/20151027T043311Z.log.html.gz

Tue Oct 27 12:00:33 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/logger.rb (Logger::Period#next_rotate_time): get rid of
	  adding to mday not to exceed the days of the month.
	  [ruby-core:71185] [Bug #11620]

Mon Oct 26 22:43:03 2015  yui-knk  <spiketeika@gmail.com>
